# FFMPEG_EASY

./: CMakeLists.txt  README.md
include/: common.h
src/: Decode.cpp  Decode.h  InputFormatContext.cpp  InputFormatContext.h  MediaCodecParameters.cpp  MediaCodecParameters.h  MediaFrame.cpp  MediaFrame.h  MediaPacket.cpp  MediaPacket.h  OutputFormatContext.cpp  OutputFormatContext.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h  main.cpp
